Bugs fixes and added remove attachment feature as client
